# mcp_obsidian

./: .gitignore  AI_USAGE_GUIDE.md  BUG_FIXES_PRIORITY.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_IMPLEMENTATION_SUCCESS.md  FINAL_SOLUTION.md  FUNDAMENTAL_CHALLENGES.md  GRAPH_STRUCTURE_RULES.md  INSTALLATION_GUIDE.md  LAUNCH_GUIDE.md  LICENSE  LINK_MANAGEMENT_TOOLS.md  MCP_SECURITY_ANALYSIS.md  PHASE_2.1_DETAILED_PLAN.md  PHASE_2_DETAILED_PLAN.md  PROJECT_CONTEXT_HISTORY.md  QUICK_START.md  QUICK_START_EXAMPLE.md  README.md  REPOSITORY_CLEANUP_REPORT.md  SOLUTION_LIGHTWEIGHT.md  TOOLS_ENHANCEMENT_PLAN.md  demo.py  enhanced_run.py  enhancement_roadmap.md  flexible_search_system.py  obsidian_mcp_concept.md  obsidian_mcp_config_template.yaml  princip.md  pyproject.toml  requirements-minimal.txt  run.py  setup.py  simple_run.py  start-enhanced.bat  start-simple.bat  start-sse.bat  start.bat  start.py  test-simple.bat  (+2 more)
.specstory/history/: 2025-09-22_23-19Z-обсуждение-концепта-mcp-сервера-для-obsidian.md  2025-09-22_23-59Z-подключение-mcp-сервера-для-заметок.md  2025-09-23_00-05Z-восстановление-контекста-для-mcpcerf.md  2025-09-24_12-07Z-создание-заметок-для-mcp-сервера.md
src/obsidian_mcp/: __main__.py  enhanced_handlers.py  enhanced_server.py  server.py  simple_server.py  smart_search.py
src/obsidian_mcp/utils/: config.py  markdown_parser.py  universal_finder.py  vault.py
tests/: smoke_client.py
